# OperationalDecisionSupportSystemForWaterSecurity

./: .dockerignore  .env.example  .gitignore  BUILD_PLAN.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.preview.yml  docker-compose.yml  index.html  pyproject.toml  railway.toml  vercel.json
config/: pilot_definition.json
data/: dashboard_snapshot.json  risk_scored_points.json
docs/: architecture.md  data-contracts.md  index.html  model-card-template.md
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
knowledge/playbooks/: general.md
knowledge/regions/: example_region.md
libs/: __init__.py  pilot.py
libs/geo/: __init__.py  admin.py
libs/ml/: alert_volume.py  artifacts.py  baselines.py  drift.py  freshness.py  model_cards.py  thresholds.py
libs/schemas/: risk.py
migrations/: env.py
migrations/versions/: 20260319_0001_initial_schema.py  20260319_0002_model_training_runs.py  20260319_0003_scoring_runs.py  20260319_0004_operator_audit_logs.py
pipelines/features/: __init__.py  district_week.py
pipelines/ingest/: __init__.py  admin_boundaries.py  common.py  geoboundaries.py  imerg.py  labels.py  ocha_dhs.py  (+1 more)
results/: model_report.json  risk_map.html  risk_scored_points.csv  synthetic_training_data.csv
sample_data/: README.md  admin_boundaries.csv  district_static_covariates.csv  district_week_labels.csv  district_week_weather.csv
scripts/: export_dashboard_snapshot.py  mint_operator_token.py  preview_db_prepare.sh  preview_smoke_test.py  railway_release.sh  seed_multi_country.py  validate_real_labels.py
(+59 files in other folders)
