[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquaintel"
version = "0.1.0"
description = "Operational decision support system for water security."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "geoalchemy2>=0.16.0,<1.0.0",
  "prefect>=3.0.0,<4.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
]
geo = [
  "geopandas>=1.0.0,<2.0.0",
  "pandas>=2.2.0,<3.0.0",
  "rasterio>=1.4.0,<2.0.0",
  "xarray>=2024.7.0",
]
ml = [
  "lightgbm>=4.5.0,<5.0.0",
  "mlflow>=2.17.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "pipelines*", "libs*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.alembic]
script_location = "migrations"
